OO-3502: export mail